Fix: Minor Fix on Mini-Nav Alignment

--- a/src/components/UI/MiniNav.module.css
+++ b/src/components/UI/MiniNav.module.css
@@ -47,9 +47,10 @@
         flex-direction: column;
         gap: .5em;
      
-        align-items: flex-start;
+        align-items: center;
         padding:1em;
         margin-bottom: 1em;
+       
 
 
     }
@@ -58,6 +59,8 @@
         width: 100%;
         gap: 1em;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
 
     }
 
